# experiments

./: .gitignore  LICENSE  README.md  experiments.cabal  package.yaml  riak-interface.cabal
2048/: .gitignore  default.nix  elm-package.json  package.json  webpack.config.js
2048/src/: Main.elm  index.html  index.js
adj2mon/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
adj2mon/src/: Lib.hs
adj2mon/test/: Spec.hs
fcpp/: .gitignore  shell.nix
fcpp/ch1/: CMakeLists.txt  Chapter1Examples.cpp  ImperativeCountLines.cpp  default.nix  myprint.hpp  ranges-v3.nix  shell.nix
recursion-schemes/: experiments-recursion-schemes.cabal
recursion-schemes/src/: Foo.hs  RecursionSchemes.hs
tf-8.2-build-test/: experiments-tf.cabal  package.yaml  stack.yaml
tf-8.2-build-test/tf82build/: README.md  tf82build.cabal
ue4/: shell.nix
