name:           experiments-recursion-schemes
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 1.10

library
  default-language: Haskell2010
  hs-source-dirs: src
  default-extensions: BangPatterns LambdaCase OverloadedStrings ViewPatterns
  ghc-options: -Wall
  build-depends:
      base
    -- , text
    -- , vector
    -- , unordered-containers
  exposed-modules:
      RecursionSchemes

-- executable experiments-recursion-schemes
--   default-language: Haskell2010
--   main-is: Main.hs
--   hs-source-dirs: exe
--   default-extensions: BangPatterns LambdaCase OverloadedStrings ViewPatterns
--   ghc-options: -Wall
--   build-depends:
--       base
--     , experiments-recursion-schemes
